--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>FEBRUARY 2023</b></p>
 <ul>
-<li><a href="https://www.rfa.org/english/news/china/lethal-aid-russia-02272023135639.html"></a>US and China spar over Ukraine war support</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/lethal-aid-russia-02272023135639.html">US and China spar over Ukraine war support</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/biden-balloon-norms-02162023151221.html">Biden seeks ‘common global norms’ for aerial objects</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/spy-balloon-radar-02132023140428.html">Radar tweaks driving balloon finds, US officials say</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/ufo-02102023162022.html">US shoots down ‘high altitude object’ over Alaska</a></li>
