--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   </div>
 
 <h2>Recent articles</h2>
-
+  
+<p><b>MARCH 2023</b></p>
+<ul>
+<li><a href="https://www.rfa.org/english/news/china/congress-bipartisanship-ccp-03012023123342.html">Dual House committees take aim at China</a></li>  
+</ul> 
+  
 <p><b>FEBRUARY 2023</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/lethal-aid-russia-02272023135639.html">US and China spar over Ukraine war support</a></li>  
