--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   
 <p><b>MARCH 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/pacific/australia-nuclear-submarine-03132023172655.html">AUKUS pact makes waves with submarine deal</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/rudd-war-accident-03092023123102.html">Rudd: US and China risk war ‘by accident’</a></li>    
 <li><a href="https://www.rfa.org/english/news/china/covid-origins-intelligence-03082023140115.html">US intel chief: Agencies ‘divided’ over COVID origins</a></li>  
 <li><a href="https://rfa.org/english/news/china/bipartisan-tiktok-ban-03072023173300.html">White House backs TikTok ban bill</a></li>
