--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   
 <p><b>MARCH 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/rights-report-blinken-03202023151350.html">Blinken: Human rights are a ‘central interest’ but not the only one</a></li>
+<li><a href="https://www.rfa.org/english/news/china/tiktok-cfius-owner-03162023111513.html">China hits back after US calls for TikTok sell-off</a></li>
+<li><a href="https://www.rfa.org/english/news/uyghur/cbp-forced-labor-03152023113754.html">Nearly $500 million in US imports blocked due to Uyghur forced labor</a></li>  
 <li><a href="https://www.rfa.org/english/news/pacific/australia-nuclear-submarine-03132023172655.html">AUKUS pact makes waves with submarine deal</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/rudd-war-accident-03092023123102.html">Rudd: US and China risk war ‘by accident’</a></li>    
 <li><a href="https://www.rfa.org/english/news/china/covid-origins-intelligence-03082023140115.html">US intel chief: Agencies ‘divided’ over COVID origins</a></li>  
-<li><a href="https://rfa.org/english/news/china/bipartisan-tiktok-ban-03072023173300.html">White House backs TikTok ban bill</a></li>
+<li><a href="https://www.rfa.org/english/news/china/bipartisan-tiktok-ban-03072023173300.html">White House backs TikTok ban bill</a></li>
 <li><a href="https://www.rfa.org/english/news/china/bgi-entity-list-03032023135505.html">US blacklists 28 more Chinese firms</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/congress-bipartisanship-ccp-03012023123342.html">Dual House committees take aim at China</a></li>  
 </ul> 
