--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   
 <p><b>MARCH 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/tsai-taiwan-transit-03282023144724.html">Taiwan leader’s US trip comes with baggage</a></li>  
 <li><a href="https://www.rfa.org/english/news/uyghur/genocide-select-committee-03242023125434.html">Uyghurs tell Congress of gang rape, shackles and sterilization</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/tiktok-chew-congress-03232023153934.html">TikTok CEO denies links to Chinese Communist Party</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/bri-budget-infrastructure-03222023170350.html">Blinken pushes for $2B for US rival to Belt and Road</a></li> 
