--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   
 <p><b>MARCH 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/taiwan-leader-visit-03302023110002.html">Tsai talks in US – behind closed doors</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/tsai-new-york-03292023160231.html">Tsai arrives in US amid Beijing’s protests</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/tsai-taiwan-transit-03282023144724.html">Taiwan leader’s US trip comes with baggage</a></li>  
 <li><a href="https://www.rfa.org/english/news/uyghur/genocide-select-committee-03242023125434.html">Uyghurs tell Congress of gang rape, shackles and sterilization</a></li>  
