--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   </div>
 
 <h2>Recent articles</h2>
+ 
+<p><b>APRIL 2023</b></p>
+<ul>  
+<li><a href="https://www.rfa.org/english/news/china/mccarthy-tsai-reagan-04052023102553.html">Taiwan’s leader praises US ties: ‘We are not alone’</a></li>
+</ul>  
   
 <p><b>MARCH 2023</b></p>
 <ul>
