--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
  
 <p><b>APRIL 2023</b></p>
 <ul>  
+<li><a href="https://www.rfa.org/english/news/china/tsai-china-war-04062023132924.html">Taiwan leader’s visit lays bare US-China schism</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/mccarthy-tsai-meeting-04052023163226.html">Taiwan’s leader praises US ties: ‘We are not alone’</a></li>
 </ul>  
   
