--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <h2>Recent articles</h2>
  
 <p><b>APRIL 2023</b></p>
-<ul>  
+<ul>
+<li><a href=""></a></li> 
+<li><a href="https://www.rfa.org/english/news/southchinasea/philippine-us-war-games-04112023050209.html">Philippines, US launch largest-ever joint war games</a></li> 
+<li><a href="https://www.rfa.org/english/news/southchinasea/manalo-philippines-taiwan-04102023160333.html">Philippine foreign secretary sees hope for Taiwan</a></li> 
 <li><a href="https://www.rfa.org/english/news/china/tsai-china-war-04062023132924.html">Taiwan leader’s visit lays bare US-China schism</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/mccarthy-tsai-meeting-04052023163226.html">Taiwan’s leader praises US ties: ‘We are not alone’</a></li>
 </ul>  
