--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
  
 <p><b>APRIL 2023</b></p>
 <ul>
-<li><a href=""></a></li> 
+<li><a href="https://www.rfa.org/english/news/china/pew-china-enemy-04122023154031.html">Survey: Americans hold increasingly negative views of China
+</a></li> 
 <li><a href="https://www.rfa.org/english/news/southchinasea/philippine-us-war-games-04112023050209.html">Philippines, US launch largest-ever joint war games</a></li> 
 <li><a href="https://www.rfa.org/english/news/southchinasea/manalo-philippines-taiwan-04102023160333.html">Philippine foreign secretary sees hope for Taiwan</a></li> 
 <li><a href="https://www.rfa.org/english/news/china/tsai-china-war-04062023132924.html">Taiwan leader’s visit lays bare US-China schism</a></li>  
