--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   
 <p><b>May 2023</b></p>
 <ul>
+  <li><a href="https://www.rfa.org/english/news/china/jet-fighter-dispute-05302023170054.html">Chinese and US jets tangle over South China Sea</a></li>
   <li><a href="https://www.rfa.org/english/news/china/debt-ceiling-default-05262023141748.html">US debt deal nears, but Asia will look on warily</a></li>
   <li><a href="https://www.rfa.org/english/news/uyghur/select-house-committee-05242023150648.html">US House panel urges further action Uyghur forced labor</a></li>
   <li><a href="https://www.rfa.org/english/news/korea/crypto-sanctions-remote-05232023125445.html">US sanctions North Korean crypto operations</a></li>
