--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   </div>
 
 <h2>Recent articles</h2>
-  
+
+<p><b>June 2023</b></p>
+<ul>
+  <li><a href="https://www.rfa.org/english/news/myanmar/heyzer-un-envoy-06012023115645.html">UN Myanmar envoy to leave role</a></li>
+</ul>  
+
 <p><b>May 2023</b></p>
 <ul>
   <li><a href="https://www.rfa.org/english/news/china/jet-fighter-dispute-05302023170054.html">Chinese and US jets tangle over South China Sea</a></li>
