--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>June 2023</b></p>
 <ul>
+  <li><a href="https://www.rfa.org/english/news/china/collision-diplomacy-beijing-06052023143918.html">Senior US officials visit Beijing in search of thaw</a></li>
   <li><a href="https://www.rfa.org/english/news/myanmar/heyzer-un-envoy-06012023115645.html">UN Myanmar envoy to leave role</a></li>
 </ul>  
 
