--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>June 2023</b></p>
 <ul>
+  <li><a href="https://www.rfa.org/english/news/china/ratner-accident-conflict-06082023122814.html">US defense official: China’s maneuvers risk conflict</a></li>
+  <li><a href="https://www.rfa.org/english/news/china/blinken-beijing-talks-06072023102544.html"></a>Reports: Blinken to visit Beijing within weeks</li>
   <li><a href="https://www.rfa.org/english/news/china/rudd-aukus-industry-06062023175331.html">Rudd foresees ‘seamless’ AUKUS defense industry</a>
   <li><a href="https://www.rfa.org/english/news/china/collision-diplomacy-beijing-06052023143918.html">Senior US officials visit Beijing in search of thaw</a></li>
   <li><a href="https://www.rfa.org/english/news/myanmar/heyzer-un-envoy-06012023115645.html">UN Myanmar envoy to leave role</a></li>
