--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>June 2023</b></p>
 <ul>
+  <li><a href="https://www.rfa.org/english/news/china/india-us-relations-06222023162455.html">Beijing looms large as Modi visits White House</a>
   <li><a href="https://www.rfa.org/english/news/cambodia/mech-dara-award-06152023143100.html">Cambodian journalist wins award for cyber-scam stories</a></li>
   <li><a href="https://www.rfa.org/english/news/china/blinken-beijing-deliverables-06142023144245.html">US official: Blinken not seeking ‘deliverables’ in Beijing</a>
   <li><a href="https://www.rfa.org/english/news/china/blinken-beijing-thaw-06132023131634.html">Blinken walks a diplomatic tightrope to Beijing</a></li>
