--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 
+<p><b>July 2023</b></p>
+<ul>
+<li><a href="https://www.rfa.org/english/news/china/reconsider-travel-advisory-07032023105615.html">US says reconsider China travel due to ‘exit bans’</a></li>    
+</ul>
+  
 <p><b>June 2023</b></p>
 <ul>
   <li><a href="https://www.rfa.org/english/news/china/blinken-biden-beijing-06282023135126.html">Blinken: No US goal for China but peace</a></li>
