--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>July 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/southchinasea/gray-zone-tactics-06302023145220.html">Beijing’s ‘gray zone’ tactics in the South China Sea</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/reconsider-travel-advisory-07032023105615.html">US says reconsider China travel due to ‘exit bans’</a></li>    
 </ul>
   
