--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>July 2023</b></p>
 <ul>
-<li><a href="https://www.rfa.org/english/news/uyghur/enes-kanter-congress-07112023135843.html">https://www.rfa.org/english/news/uyghur/enes-kanter-congress-07112023135843.html</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/government-hack-microsoft-07122023135128.html">Chinese hackers breached US email servers for a month</a></li>  
+<li><a href="https://www.rfa.org/english/news/uyghur/enes-kanter-congress-07112023135843.html">NBA star says he was dumped for China criticism</a></li>  
 <li><a href="https://www.rfa.org/english/news/environment/kerry-climate-china-07072023115040.html">US climate envoy John Kerry to visit China</a></li>
 <li><a href="https://www.rfa.org/english/news/southchinasea/gray-zone-tactics-06302023145220.html">Beijing’s ‘gray zone’ tactics in the South China Sea</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/reconsider-travel-advisory-07032023105615.html">US says reconsider China travel due to ‘exit bans’</a></li>    
