--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>July 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/russia-economic-support-07272023124810.html">US intelligence: Beijing has increased Russia support</a></li>
+<li><a href="https://www.rfa.org/english/news/china/pew-china-views-07272023122307.html"></a>Global survey: China viewed in more negative light</li>
+<li><a href="https://www.rfa.org/english/news/china/aukus-defense-industry-07262023154824.html">Democrats question proposed part of AUKUS deal</a></li>
+<li><a href="https://www.rfa.org/english/news/china/raimondo-visit-beijing-07252023144444.html">US commerce secretary plans China trip</a></li>
+<li><a href="https://www.rfa.org/english/news/china/developing-country-status-07132023142120.html">Kerry: China won’t surrender ‘developing country’ rights</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/government-hack-microsoft-07122023135128.html">Chinese hackers breached US email servers for a month</a></li>  
 <li><a href="https://www.rfa.org/english/news/uyghur/enes-kanter-congress-07112023135843.html">NBA star says he was dumped for China criticism</a></li>  
 <li><a href="https://www.rfa.org/english/news/environment/kerry-climate-china-07072023115040.html">US climate envoy John Kerry to visit China</a></li>
