--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <h2>Recent articles</h2>
 <p><b>August 2023</b></p>
 <ul>
-<li><a href="https://www.rfa.org/english/news/china/wang-yi-visit-08012023133926.html">Groundwork laid for China’s top diplomat to visit US</a>a></li>
+<li><a href="https://www.rfa.org/english/news/china/wang-yi-visit-08012023133926.html">Groundwork laid for China’s top diplomat to visit US</a></li>
 </ul>
   
 <p><b>July 2023</b></p>
