--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   
 <p><b>July 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/outbound-investment-regulation-08092023152033.html">Biden issues order regulating investment in China</a></li>
+<li><a href="https://www.rfa.org/english/news/uyghur/uflpa-slavery-ban-08022023130509.html">US bans imports from two Chinese firms over Uyghur forced labor</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/russia-economic-support-07272023124810.html">US intelligence: Beijing has increased Russia support</a></li>
 <li><a href="https://www.rfa.org/english/news/china/pew-china-views-07272023122307.html">Global survey: China viewed in more negative light</a></li>
 <li><a href="https://www.rfa.org/english/news/china/aukus-defense-industry-07262023154824.html">Democrats question proposed part of AUKUS deal</a></li>
