--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <p><b>August 2023</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/outbound-investment-regulation-08092023152033.html">Biden issues order regulating investment in China</a></li>
-<li><a href="https://www.rfa.org/english/news/uyghur/uflpa-slavery-ban-08022023130509.html">US bans imports from two Chinese firms over Uyghur forced labor</a></li>  
+<li><a href="https://www.rfa.org/english/news/uyghur/uflpa-slavery-ban-08022023130509.html">US bans imports from two Chinese firms over forced labor</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/wang-yi-visit-08012023133926.html">Groundwork laid for China’s top diplomat to visit US</a></li>
 </ul>
   
