--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <h2>Recent articles</h2>
 <p><b>August 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/taiwan-transit-lai-08102023110212.html">Taiwan deputy leader’s trip tests US-China thaw</a></li>
 <li><a href="https://www.rfa.org/english/news/china/outbound-investment-regulation-08092023152033.html">Biden issues order regulating investment in China</a></li>
 <li><a href="https://www.rfa.org/english/news/uyghur/uflpa-slavery-ban-08022023130509.html">US bans imports from two Chinese firms over forced labor</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/wang-yi-visit-08012023133926.html">Groundwork laid for China’s top diplomat to visit US</a></li>
