--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <h2>Recent articles</h2>
 <p><b>August 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/tibet/sanctions-forced-schooling-08222023111743.html">US to issue sanctions over forced assimilation of Tibetans</a></li>
+<li><a href="https://www.rfa.org/english/news/china/gina-raimondo-beijing-08222023113403.html"></a>US commerce secretary to visit Beijing next week</li>  
 <li><a href="https://www.rfa.org/english/news/cambodia/hun-sen-legacy-08182023094118.html">Hun Sen’s legacy: Cambodia as the family business</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/camp-david-summit-08182023160012.html">South Korea, Japan and US vow ‘new era’</a></li>  
 <li><a href="https://www.rfa.org/english/news/korea/camp-david-summit-08162023134639.html">US, South Korea and Japan look to ‘institutionalize’ ties</a></li>
