--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <h2>Recent articles</h2>
 <p><b>August 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/cambodia/un-scam-compounds-08292023134753.html">UN: Hundreds of thousands of people forced to scam</a>  
+<li><a href="https://www.rfa.org/english/news/vietnam/biden-hanoi-visit-08282023124650.html">Biden to visit Vietnam next month</a>
 <li><a href="https://www.rfa.org/english/news/tibet/sanctions-forced-schooling-08222023111743.html">US to issue sanctions over forced assimilation of Tibetans</a></li>
 <li><a href="https://www.rfa.org/english/news/china/gina-raimondo-beijing-08222023113403.html">US commerce secretary to visit Beijing next week</a></li>  
 <li><a href="https://www.rfa.org/english/news/cambodia/hun-sen-legacy-08182023094118.html">Hun Sen’s legacy: Cambodia as the family business</a></li>  
