--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <h2>Recent articles</h2>
 <p><b>August 2023</b></p>
 <ul>  
+<li><a href="https://www.rfa.org/english/news/korea/russian-weapons-deal-08302023135529.html">US: North Korea in talks to supply Russia with weapons</a></li>  
 <li><a href="https://www.rfa.org/english/news/cambodia/un-scam-compounds-08292023134753.html">UN: Hundreds of thousands of people forced to scam</a>  
 <li><a href="https://www.rfa.org/english/news/vietnam/biden-hanoi-visit-08282023124650.html">Biden to visit Vietnam next month</a>
 <li><a href="https://www.rfa.org/english/news/myanmar/air-strike-sanctions-08232023130434.html">US sanctions Myanmar junta’s jet-fuel suppliers</a></li>
