--- a/index.html
+++ b/index.html
@@ -53,8 +53,17 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   </div>
 
 <h2>Recent articles</h2>
+
+<p><b>September 2023</b></p>
+<ul> 
+<li><a href="https://www.rfa.org/english/news/vietnam/biden-hanoi-trade-09082023114849.html">Biden’s Hanoi trip buttressed by trade</a></li>
+<li><a href="https://www.rfa.org/english/news/china/aukus-export-control-09062023143639.html">US senators question defense sharing with Australia</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/g20-xi-biden-09052023142913.html">G20 to meet amid a global turn inward</a></li>  
+</ul>
+  
 <p><b>August 2023</b></p>
-<ul>  
+<ul>
+<li><a href="https://www.rfa.org/english/news/korea/sanctions-ballistic-missiles-08312023160352.html">US issues sanctions over North Korean missile program</a></li>  
 <li><a href="https://www.rfa.org/english/news/korea/russian-weapons-deal-08302023135529.html">US: North Korea in talks to supply Russia with weapons</a></li>  
 <li><a href="https://www.rfa.org/english/news/cambodia/un-scam-compounds-08292023134753.html">UN: Hundreds of thousands of people forced to scam</a>  
 <li><a href="https://www.rfa.org/english/news/vietnam/biden-hanoi-visit-08282023124650.html">Biden to visit Vietnam next month</a>
