--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <p><b>September 2023</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/taiwan-double-taxation-09142023132341.html">Senate finance committee approves Taiwan tax bill</a></li>li>
-<li><a href="https://www.rfa.org/english/news/myanmar/laos-asean-chairmanship-09132023170848.html"></a>Official: US pushing Laos to press Myanmar junta</li>  
+<li><a href="https://www.rfa.org/english/news/myanmar/laos-asean-chairmanship-09132023170848.html">Official: US pushing Laos to press Myanmar junta</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/wall-street-investment-09122023133832.html">‘Washington and Wall Street are two different countries’</a></li>   
 <li><a href="https://www.rfa.org/english/news/vietnam/biden-hanoi-trade-09082023114849.html">Biden’s Hanoi trip buttressed by trade</a></li>
 <li><a href="https://www.rfa.org/english/news/china/aukus-export-control-09062023143639.html">US senators question defense sharing with Australia</a></li>  
