--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/un-blinken-wang-09212023153011.html">China sent who to the UN?</a></li>    
 <li><a href="https://www.rfa.org/english/news/myanmar/myanmar-un-ambassador-09212023132108.html">Kyaw Moe Tun to remain Myanmar’s UN rep</a></li>    
-<li><a href="https://www.rfa.org/english/news/korea/skorea-un-speech-09202023143535.html">S Korean leader warns Russia, N Korea against military cooperation</a></li>    
+<li><a href="https://www.rfa.org/english/news/korea/skorea-un-speech-09202023143535.html">Yoon warns Russia, N Korea against cooperation</a></li>    
 <li><a href="https://www.rfa.org/english/news/environment/zelenskyy-climate-summit-09202023134938.html">Zelenskyy upstages UN climate summit</a></li>    
 <li><a href="https://www.rfa.org/english/news/uyghur/china-transnational-repression-09192023172318.html">Uyghur event in NY goes ahead despite Beijing’s warning</a></li>    
 <li><a href="https://www.rfa.org/english/news/pacific/un-assembly-relevance-09192023131006.html">UN’s relevance in focus as world leaders gather</a></li>  
