--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>September 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/cambodia/state-department-aid-09282023120753.html">US won’t say why it reversed $18M aid cut to Cambodia</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/disinformation-propaganda-report-09282023162711.html">US diplomat: ‘We’re in an undeclared information war’</a></li>  
 <li><a href="https://www.rfa.org/english/news/pacific/40-billion-infrastructure-09252023144302.html">Biden proposes $40M for Pacific Islands infrastructure</a></li>  
 <li><a href="https://www.rfa.org/english/news/cambodia/hun-manet-un-09222023150854.html">Hun Manet tells UN Cambodia’s elections were fair</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/un-blinken-wang-09212023153011.html">China sent who to the UN?</a></li>    
