--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 
+<p><b>October 2023</b></p>
+<ul>
+<li><a href="https://www.rfa.org/english/news/cambodia/hun-manet-aid-10022023133445.html">US: Cambodia aid doesn’t mean election legitimacy</a></li>  
+</ul>  
+
 <p><b>September 2023</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/cambodia/state-department-aid-09282023120753.html">US won’t say why it reversed $18M aid cut to Cambodia</a></li>    
