--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>October 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/senate-trip-schumer-10032023111805.html">US Senate delegation to visit China next week</a></li>  
 <li><a href="https://www.rfa.org/english/news/cambodia/hun-manet-aid-10022023133445.html">US: Cambodia aid doesn’t mean election legitimacy</a></li>  
 </ul>  
 
