--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>October 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/soldier-google-treason-10062023142136.html">Former US soldier arrested for helping Chinese spies</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/microchips-russia-ban-10062023124921.html">US blacklists 42 Chinese firms for selling microchips to Russia</a></li>
 <li><a href="https://www.rfa.org/english/news/china/senate-trip-schumer-10032023111805.html">US Senate delegation to visit China next week</a></li>  
 <li><a href="https://www.rfa.org/english/news/cambodia/hun-manet-aid-10022023133445.html">US: Cambodia aid doesn’t mean election legitimacy</a></li>  
 </ul>  
