--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>October 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/nvidia-chips-ban-10172023112547.html">US expands chip export ban to China</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/lawyer-forced-repatriation-10122023105128.html">US calls for China to ‘confirm’ location of rights lawyer</a></li>  
+<li><a href="https://www.rfa.org/english/news/uyghur/c4ads-mining-slavery-10112023102249.html">Report: US brands linked to Uyghur-mined gold</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/soldier-google-treason-10062023142136.html">Former US soldier arrested for helping Chinese spies</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/microchips-russia-ban-10062023124921.html">US blacklists 42 Chinese firms for selling microchips to Russia</a></li>
 <li><a href="https://www.rfa.org/english/news/china/senate-trip-schumer-10032023111805.html">US Senate delegation to visit China next week</a></li>  
