--- a/cambodia/index.html
+++ b/cambodia/index.html
@@ -52,7 +52,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
     <p><b>Twitter</b>: <a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <b>Contact</b>: <a href="mailto:willemynsa@rfa.org">willemynsa@rfa.org</a></a></p>
   </div>
 
-  <h2>Selected articles</h2>  
+  <h2>Selected Cambodia stories</h2>  
   
 <p><b>FOREIGN AFFAIRS</b></p>
 <ul>
