--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>October 2023</b></p>
 <ul>
-<li><a href="https://www.rfa.org/english/news/china/wang-yi-washington-10262023121859.html">China’s foreign minister in Washington to pave way for X</a></li>
+<li><a href="https://www.rfa.org/english/news/china/wang-yi-washington-10262023121859.html">China’s foreign minister in Washington to pave way for Xi</a></li>
 <li><a href="https://www.rfa.org/english/news/china/biden-albanese-aukus-10252023155750.html">Biden not worried by Australia’s ties to China</a></li>
 <li><a href="https://www.rfa.org/english/news/china/seafood-forced-labor-10242023133025.html">Experts: Americans are eating fish processed by slaves</a></li>
 <li><a href="https://www.rfa.org/english/news/china/economy-military-modernization-10232023171259.html">US officials: China’s economic woes may slow military rise</a></li>  
