--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>October 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/biden-wang-xi-10272023154439.html">Biden meets China’s foreign minister, vows to ‘work together’</a></li>
 <li><a href="https://www.rfa.org/english/news/china/wang-yi-washington-10262023121859.html">China’s foreign minister in Washington to pave way for Xi</a></li>
 <li><a href="https://www.rfa.org/english/news/china/biden-albanese-aukus-10252023155750.html">Biden not worried by Australia’s ties to China</a></li>
 <li><a href="https://www.rfa.org/english/news/china/seafood-forced-labor-10242023133025.html">Experts: Americans are eating fish processed by slaves</a></li>
