--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 
+<p><b>November 2023</b></p>
+<ul>
+<li><a href=""></a></li>
+<li><a href="https://www.rfa.org/english/news/china/kurt-campbell-state-11012023115658.html">Biden taps Asia czar as Blinken’s deputy</a></li>
+</ul>
+
 <p><b>October 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/myanmar/myanma-oil-gas-10312023121241.html">US sanctions Myanmar’s state energy company</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/biden-wang-xi-10272023154439.html">White House expects Biden and Xi to meet next month</a></li>
 <li><a href="https://www.rfa.org/english/news/china/wang-yi-washington-10262023121859.html">China’s foreign minister in Washington to pave way for Xi</a></li>
 <li><a href="https://www.rfa.org/english/news/china/biden-albanese-aukus-10252023155750.html">Biden not worried by Australia’s ties to China</a></li>
@@ -235,7 +242,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <li><a href="https://www.rfa.org/english/news/china/us-china-security-10122022154022.html">Biden: Next decade will be ‘decisive’ for rivalry with China</a></li>
 </ul> 
 
-<h2>Selected articles</h2>  
+<h2>Selected Cambodia articles</h2>  
   
 <p><b>FOREIGN AFFAIRS</b></p>
 <ul>
