--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>November 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/hong-kong-sanctions-11022023111001.html">US lawmakers urge sanctions on Hong Kong justice officials</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/kurt-campbell-state-11012023115658.html">Biden taps Asia czar as Blinken’s deputy</a></li>
 </ul>
 
