--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>November 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/apec-ipef-biden-11162023161603.html">Biden: US-China ties ‘not all kumbaya’ after Xi talks</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/san-francisco-xi-11152023115850.html">Xi and Biden reinstate direct military talks</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/apec-biden-xi-11092023105520.html">APEC 2023: All eyes on Xi and Biden</a>  
 <li><a href="https://www.rfa.org/english/news/china/hong-kong-sanctions-11022023111001.html">US lawmakers urge sanctions on Hong Kong justice officials</a></li>  
