--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>November 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/activist-mark-wpprotest-11292023205314.html">US activists mark year since White Paper protests</a></li>  
+<li><a href="https://www.rfa.org/english/news/korea/n-korea-satellite-launch-11212023095659.html">N Korea launches satellite despite warnings</a>  
 <li><a href="https://www.rfa.org/english/news/china/apec-ipef-biden-11162023161603.html">Biden: US-China ties ‘not all kumbaya’ after Xi talks</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/san-francisco-xi-11152023115850.html">Xi and Biden reinstate direct military talks</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/apec-biden-xi-11092023105520.html">APEC 2023: All eyes on Xi and Biden</a>  
