--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 
+<p><b>December 2023</b></p>
+<ul>
+<li><a href="https://www.rfa.org/english/news/china/discourse-power-gallagher-12012023153219.html">Congress hears of Beijing’s ‘discourse power’</a></li>  
+</ul>
+  
 <p><b>November 2023</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/activist-mark-wpprotest-11292023205314.html">US activists mark year since White Paper protests</a></li>  
