--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>December 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/jimmy-lai-lawyer-12062023104201.html">Jimmy Lai’s lawyer says rape threats precede public events</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/afghanistan-taliban-ambassador-12052023145223.html">China seeks a more ‘inclusive’ Taliban
+</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/discourse-power-gallagher-12012023153219.html">Congress hears of Beijing’s ‘discourse power’</a></li>  
 </ul>
   
