--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>December 2023</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/military-ties-resumption-12212023103405.html">Top US and Chinese generals resume talks</a></li>  
+<li><a href="https://www.rfa.org/english/news/korea/nkorea-fires-icbm-12172023220148.html">N Korea fires long-range ballistic missile</a>  
 <li><a href="https://www.rfa.org/english/news/china/jimmy-lai-lawyer-12062023104201.html">Jimmy Lai’s lawyer says rape threats precede public events</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/afghanistan-taliban-ambassador-12052023145223.html">China seeks a more ‘inclusive’ Taliban
 </a></li>  
