--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 
+<p><b>January 2024</b></p>
+<ul>
+<li><a href=""></a></li>
+<li><a href="https://www.rfa.org/english/news/korea/russia-ukraine-sanctions-01122024101320.html">US imposes sanctions over North Korean missiles to Russia</a></li>
+<li><a href="https://www.rfa.org/english/news/china/hrw-report-2024-01112024114207.html">‘Double standards’ on rights is doing damage, report says</a></li>
+<li><a href="https://www.rfa.org/english/news/china/biden-taiwan-delegation-01102024210128.html">Biden to send delegation to Taiwan after election</a>  
+<li><a href="https://www.rfa.org/english/news/china/military-talks-taiwan-01102024115629.html">US and Chinese military officials meet in Washington</a></li>
+<li><a href="https://www.rfa.org/english/news/china/wolf-warrior-return-01092024145621.html">In NY, Chinese official downplays ‘Wolf Warrior’ diplomacy</a></li>
+<li><a href="https://www.rfa.org/english/news/china/navy-chinese-spy-01092024121429.html">US Navy sailor jailed for working with Chinese spy</a></li>
+<li><a href="https://www.rfa.org/english/news/korea/missiles-russia-ukraine-01042024141608.html">Russia fired North Korean missiles into Ukraine, US says</a></li>
+<li><a href="https://www.rfa.org/english/news/china/trade-war-gdp-01032024114209.html">IMF chief: US-China rivalry could dent global GDP by 7%</a></li>  
+</ul>
+
 <p><b>December 2023</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/uyghur/kharon-countermeasure-sanctions-12272023135142.html">China sanctions US compliance firm over Uyghur research</a></li>
