--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>January 2024</b></p>
 <ul>
-<li><a href=""></a></li>
+<li><a href="https://www.rfa.org/english/news/china/taiwan-election-prices-01172024113925.html">‘No honeymoon period’ for Taiwan’s new leader</a></li>
 <li><a href="https://www.rfa.org/english/news/korea/russia-ukraine-sanctions-01122024101320.html">US imposes sanctions over North Korean missiles to Russia</a></li>
 <li><a href="https://www.rfa.org/english/news/china/hrw-report-2024-01112024114207.html">‘Double standards’ on rights is doing damage, report says</a></li>
 <li><a href="https://www.rfa.org/english/news/china/biden-taiwan-delegation-01102024210128.html">Biden to send delegation to Taiwan after election</a>  
