--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>January 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/hackers-civilian-infrastructure-01312024152506.html">FBI director: Chinese hackers targeting US infrastructure</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/economy-sullivan-gdp-01312024131812.html">US official: China may never surpass America’s economy</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/corruption-asia-index-01302024104623.html">Report: ‘Little to no’ progress on fighting corruption in Asia</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/fentanyl-precursor-cooperation-01292024115250.html">US officials headed to Beijing for fentanyl talks</a></li>  
+<li><a href="https://www.rfa.org/english/news/korea/kim-jong-ho-01262024121533.html">Kim Jong Un’s sister ‘not to be underestimated,’ author says</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/sullivan-wang-yi-01272024102737.html">US urges China to push Iran to pressure Houthis over Red Sea attacks</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/universal-periodic-review-01222024192910.html">Little time to review China’s rights record at UN</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/drone-dji-ban-01182024113315.html">Chinese drones may pose security risks, US agencies warn</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/taiwan-election-prices-01172024113925.html">‘No honeymoon period’ for Taiwan’s new leader</a></li>
 <li><a href="https://www.rfa.org/english/news/korea/russia-ukraine-sanctions-01122024101320.html">US imposes sanctions over North Korean missiles to Russia</a></li>
 <li><a href="https://www.rfa.org/english/news/china/hrw-report-2024-01112024114207.html">‘Double standards’ on rights is doing damage, report says</a></li>
