--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>January 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/kurt-campbell-confirmed-02062024171706.html">Senate confirms Kurt Campbell as No. 2 US diplomat</a></li>  
+<li><a href="https://www.rfa.org/english/news/korea/human-rights-report-02072024090144.html">UN should update North Korea rights report: experts</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/state-bureau-drl-02082024122618.html">Senate vets Biden’s pick for key human rights diplomat</a></li>  
+</ul>
+  
+<p><b>January 2024</b></p>
+<ul>
 <li><a href="https://www.rfa.org/english/news/china/hackers-civilian-infrastructure-01312024152506.html">FBI director: Chinese hackers targeting US infrastructure</a></li>    
 <li><a href="https://www.rfa.org/english/news/china/economy-sullivan-gdp-01312024131812.html">US official: China may never surpass America’s economy</a></li>    
 <li><a href="https://www.rfa.org/english/news/china/corruption-asia-index-01302024104623.html">Report: ‘Little to no’ progress on fighting corruption in Asia</a></li>  
