--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 
-<p><b>January 2024</b></p>
+<p><b>February 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/uyghur/uyghur-policy-act-02162024120551.html">Uyghur Policy Act passes US House</a></li> 
+<li><a href="https://www.rfa.org/english/news/pacific/compacts-free-association-02152024160449.html">US officials: Funding for Pacific allies ‘must be done’</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/taiwan-american-allies-02142024115720.html">US must better engage allies on Taiwan: experts</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/senate-funding-bill-02132024120650.html">Almost $5 billion of Indo-Pacific aid in bipartisan Senate bill</a></li>      
 <li><a href="https://www.rfa.org/english/news/china/state-bureau-drl-02082024122618.html">Senate vets Biden’s pick for key human rights diplomat</a></li>  
 <li><a href="https://www.rfa.org/english/news/korea/human-rights-report-02072024090144.html">UN should update North Korea rights report: experts</a></li> 
 <li><a href="https://www.rfa.org/english/news/china/kurt-campbell-confirmed-02062024171706.html">Senate confirms Kurt Campbell as No. 2 US diplomat</a></li>
