--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>February 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/mayorkas-harassment-students-02202024152326.html">‘Stop harassing’ Chinese students, Beijing tells US</a></li>  
 <li><a href="https://www.rfa.org/english/news/uyghur/uyghur-policy-act-02162024120551.html">Uyghur Policy Act passes US House</a></li> 
 <li><a href="https://www.rfa.org/english/news/pacific/compacts-free-association-02152024160449.html">US officials: Funding for Pacific allies ‘must be done’</a></li>    
 <li><a href="https://www.rfa.org/english/news/china/taiwan-american-allies-02142024115720.html">US must better engage allies on Taiwan: experts</a></li>  
